# test_pulumi

./: .gitignore  Pulumi.yaml  README.md  __main__.py  pyproject.toml  test_pulumi_stack_graph_v2  tmp_test_makelayer.py
lambda_fct/: make_layer.py
my_pulumi_project/: __main__.py  test_pulumi_stack_graph
my_pulumi_project/lambda/: handler.py
website/: index.html
