[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = ">=6.0.2,<7.0.0"
python = "^3.9"
ruff = "^0.8.3"
requests = "^2.32.3"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv"
]

